peg.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$DefaultTracer() {
  this.indentLevel = 0;
}

peg$DefaultTracer.prototype.trace = function(event) {
  var that = this;

  function log(event) {
    function repeat(string, n) {
       var result = "", i;

       for (i = 0; i < n; i++) {
         result += string;
       }

       return result;
    }

    function pad(string, length) {
      return string + repeat(" ", length - string.length);
    }

    if (typeof console === "object") {
      console.log(
        event.location.start.line + ":" + event.location.start.column + "-"
          + event.location.end.line + ":" + event.location.end.column + " "
          + pad(event.type, 10) + " "
          + repeat("  ", that.indentLevel) + event.rule
      );
    }
  }

  switch (event.type) {
    case "rule.enter":
      log(event);
      this.indentLevel++;
      break;

    case "rule.match":
      this.indentLevel--;
      log(event);
      break;

    case "rule.fail":
      this.indentLevel--;
      log(event);
      break;

    default:
      throw new Error("Invalid event type: " + event.type + ".");
  }
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Grammar: peg$parseGrammar },
      peg$startRuleFunction  = peg$parseGrammar,

      peg$c0 = function(spacing, definition, endoffile) {
          return {
            'type': 'Grammar',
            'children': [spacing].concat(definition.concat([endoffile])),
            'offset': location().start.offset
          }
        },
      peg$c1 = function(identifier, leftarrow, expression) {
          return {
            'type': 'Definition',
            'children': [identifier, leftarrow, expression],
            'offset': location().start.offset
          }
        },
      peg$c2 = function(sequence, slash, seq) {
              return [slash, seq]
            },
      peg$c3 = function(sequence, sequences) {
          return {
            'type': 'Expression',
            'children': [sequence].concat([].concat.apply([], sequences)),
            'offset': location().start.offset
          }
        },
      peg$c4 = function(prefix) {
          return {
            'type': 'Sequence',
            'children': prefix,
            'offset': location().start.offset
          }
        },
      peg$c5 = function(prefix, suffix) {
          return {
            'type': 'Prefix',
            'children': prefix ? [prefix, suffix] : [suffix],
            'offset': location().start.offset
          }
        },
      peg$c6 = function(primary, suffix) {
          return {
            'type': 'Suffix',
            'children': suffix ? [primary, suffix] : [primary],
            'offset': location().start.offset
          }
        },
      peg$c7 = function(identifier) {
          return {
            'type': 'Primary',
            'children': [identifier],
            'offset': location().start.offset
          }
        },
      peg$c8 = function(open, expression, close) {
          return {
            'type': 'Primary',
            'children': [open, expression, close],
            'offset': location().start.offset
          }
        },
      peg$c9 = function(literal) {
          return {
            'type': 'Primary',
            'children': [literal],
            'offset': location().start.offset
          }
        },
      peg$c10 = function(cls) {
          return {
            'type': 'Primary',
            'children': [cls],
            'offset': location().start.offset
          }
        },
      peg$c11 = function(dot) {
          return {
            'type': 'Primary',
            'children': [dot],
            'offset': location().start.offset
          }
        },
      peg$c12 = function(identstart, identcont, spacing) {
          return {
            'type': 'Identifier',
            'children': [identstart].concat(identcont.concat([spacing])),
            'offset': location().start.offset
          }
        },
      peg$c13 = /^[a-z_]/i,
      peg$c14 = peg$classExpectation([["a", "z"], "_"], false, true),
      peg$c15 = function() {
          return {
            'type': 'IdentStart',
            'children': [text()],
            'offset': location().start.offset
          }
        },
      peg$c16 = function(identstart) {
          return {
            'type': 'IdentCont',
            'children': [identstart],
            'offset': location().start.offset
          }
        },
      peg$c17 = /^[0-9]/,
      peg$c18 = peg$classExpectation([["0", "9"]], false, false),
      peg$c19 = function() {
          return {
            'type': 'IdentCont',
            'children': [text()],
            'offset': location().start.offset
          }
        },
      peg$c20 = /^[']/,
      peg$c21 = peg$classExpectation(["'"], false, false),
      peg$c22 = function(open, char) {
              return char
            },
      peg$c23 = function(open, chars, close, spacing) {
          return {
            'type': 'Literal',
            'children': [open].concat(chars.concat([close, spacing])),
            'offset': location().start.offset
          }
        },
      peg$c24 = /^["]/,
      peg$c25 = peg$classExpectation(["\""], false, false),
      peg$c26 = function(open) {
              return char
            },
      peg$c27 = function(open, char, close, spacing) {
          return {
            'type': 'Literal',
            'children': [open].concat(chars.concat([close, spacing])),
            'offset': location().start.offset
          }
        },
      peg$c28 = "[",
      peg$c29 = peg$literalExpectation("[", false),
      peg$c30 = "]",
      peg$c31 = peg$literalExpectation("]", false),
      peg$c32 = function(open, range) {
              return range
            },
      peg$c33 = function(open, ranges, close, spacing) {
          return {
            'type': 'Class',
            'children': [open].concat(ranges.concat([close, spacing])),
            'offset': location().start.offset
          }
        },
      peg$c34 = "-",
      peg$c35 = peg$literalExpectation("-", false),
      peg$c36 = function(start, sep, end) {
          return {
            'type': 'Range',
            'children': [start, sep, end],
            'offset': location().start.offset
          }
        },
      peg$c37 = function(char) {
          return {
            'type': 'Range',
            'children': [char],
            'offset': location().start.offset
          }
        },
      peg$c38 = "\\",
      peg$c39 = peg$literalExpectation("\\", false),
      peg$c40 = /^[nrt'"[\]\\]/,
      peg$c41 = peg$classExpectation(["n", "r", "t", "'", "\"", "[", "]", "\\"], false, false),
      peg$c42 = function() {
          return {
            'type': 'Char',
            'children': [text()],
            'offset': location().start.offset
          }
        },
      peg$c43 = /^[0-2]/,
      peg$c44 = peg$classExpectation([["0", "2"]], false, false),
      peg$c45 = /^[0-7]/,
      peg$c46 = peg$classExpectation([["0", "7"]], false, false),
      peg$c47 = peg$anyExpectation(),
      peg$c48 = "<-",
      peg$c49 = peg$literalExpectation("<-", false),
      peg$c50 = function(leftarrow, spacing) {
          return {
            'type': 'LEFTARROW',
            'children': [leftarrow, spacing],
            'offset': location().start.offset
          }
        },
      peg$c51 = "/",
      peg$c52 = peg$literalExpectation("/", false),
      peg$c53 = function(slash, spacing) {
          return {
            'type': 'SLASH',
            'children': [slash, spacing],
            'offset': location().start.offset
          }
        },
      peg$c54 = "&",
      peg$c55 = peg$literalExpectation("&", false),
      peg$c56 = function(and, spacing) {
          return {
            'type': 'AND',
            'children': [and, spacing],
            'offset': location().start.offset
          }
        },
      peg$c57 = "!",
      peg$c58 = peg$literalExpectation("!", false),
      peg$c59 = function(not, spacing) {
          return {
            'type': 'NOT',
            'children': [not, spacing],
            'offset': location().start.offset
          }
        },
      peg$c60 = "?",
      peg$c61 = peg$literalExpectation("?", false),
      peg$c62 = function(question, spacing) {
          return {
            'type': 'QUESTION',
            'children': [question, spacing],
            'offset': location().start.offset
          }
        },
      peg$c63 = "*",
      peg$c64 = peg$literalExpectation("*", false),
      peg$c65 = function(star, spacing) {
          return {
            'type': 'STAR',
            'children': [star, spacing],
            'offset': location().start.offset
          }
        },
      peg$c66 = "+",
      peg$c67 = peg$literalExpectation("+", false),
      peg$c68 = function(plus, spacing) {
          return {
            'type': 'PLUS',
            'children': [plus, spacing],
            'offset': location().start.offset
          }
        },
      peg$c69 = "(",
      peg$c70 = peg$literalExpectation("(", false),
      peg$c71 = function(open, spacing) {
          return {
            'type': 'OPEN',
            'children': [open, spacing],
            'offset': location().start.offset
          }
        },
      peg$c72 = ")",
      peg$c73 = peg$literalExpectation(")", false),
      peg$c74 = function(close, spacing) {
          return {
            'type': 'CLOSE',
            'children': [close, spacing],
            'offset': location().start.offset
          }
        },
      peg$c75 = ".",
      peg$c76 = peg$literalExpectation(".", false),
      peg$c77 = function(dot, spacing) {
          return {
            'type': 'DOT',
            'children': [dot, spacing],
            'offset': location().start.offset
          }
        },
      peg$c78 = function(spacing) {
          return {
            'type': 'Spacing',
            'children': spacing,
            'offset': location().start.offset
          }
        },
      peg$c79 = "#",
      peg$c80 = peg$literalExpectation("#", false),
      peg$c81 = function(open, dot) {
              return dot
            },
      peg$c82 = function(open, content, endofline) {
          return {
            'type': 'Comment',
            'children': [open].concat(content.concat([endofline])),
            'offset': location().start.offset
          }
        },
      peg$c83 = " ",
      peg$c84 = peg$literalExpectation(" ", false),
      peg$c85 = function() {
          return {
            'type': 'Space',
            'children': [text()],
            'offset': location().start.offset
          }
        },
      peg$c86 = "\t",
      peg$c87 = peg$literalExpectation("\t", false),
      peg$c88 = function(endofline) {
          return {
            'type': 'Space',
            'children': [endofline],
            'offset': location().start.offset
          }
        },
      peg$c89 = "\r\n",
      peg$c90 = peg$literalExpectation("\r\n", false),
      peg$c91 = function() {
          return {
            'type': 'EndOfLine',
            'children': [text()],
            'offset': location().start.offset
          }
        },
      peg$c92 = "\n",
      peg$c93 = peg$literalExpectation("\n", false),
      peg$c94 = "\r",
      peg$c95 = peg$literalExpectation("\r", false),
      peg$c96 = function() {
          return {
            'type': 'EndOfFile',
            'children': [],
            'offset': location().start.offset
          }
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$tracer = "tracer" in options ? options.tracer : new peg$DefaultTracer(),

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseGrammar() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Grammar",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Grammar",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Grammar",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseSpacing();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseDefinition();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseDefinition();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEndOfFile();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Grammar",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Grammar",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseDefinition() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Definition",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Definition",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Definition",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLEFTARROW();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseExpression();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Definition",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Definition",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3, s4, s5,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Expression",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Expression",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Expression",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseSequence();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseSLASH();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseSequence();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c2(s1, s4, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseSLASH();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseSequence();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c2(s1, s4, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Expression",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Expression",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseSequence() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Sequence",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Sequence",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Sequence",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsePrefix();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsePrefix();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Sequence",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Sequence",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parsePrefix() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Prefix",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 4,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Prefix",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Prefix",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseAND();
    if (s1 === peg$FAILED) {
      s1 = peg$parseNOT();
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSuffix();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Prefix",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Prefix",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseSuffix() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Suffix",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 5,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Suffix",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Suffix",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parsePrimary();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseQUESTION();
      if (s2 === peg$FAILED) {
        s2 = peg$parseSTAR();
        if (s2 === peg$FAILED) {
          s2 = peg$parsePLUS();
        }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Suffix",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Suffix",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parsePrimary() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Primary",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 6,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

    if (cached.result !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Primary",
        result: cached.result,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Primary",
        location: peg$computeLocation(startPos, startPos)
      });
    }

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parseLEFTARROW();
      peg$silentFails--;
      if (s3 === peg$FAILED) {
        s2 = void 0;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseOPEN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseExpression();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCLOSE();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseLiteral();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseClass();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseDOT();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s1);
            }
            s0 = s1;
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "Primary",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "Primary",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseIdentifier() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "Identifier",
      location: peg$computeLocation(startPos, startPos)
    });

    var key    = peg$currPos * 29 + 7,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;
